--- a/ansible/roles/wordpress-builds/tasks/secrets.yml
+++ b/ansible/roles/wordpress-builds/tasks/secrets.yml
@@ -8,6 +8,11 @@
     file: github-credentials.yml
     name: github_credentials
 
+- tags: always
+  include_vars:
+    file: tekton-credentials.yml
+    name: tekton_credentials
+
 - name: wp-base/Secret - Push Secret
   kubernetes.core.k8s:
     definition:
@@ -39,3 +44,16 @@
       stringData:
         APP_ID: "{{ github_credentials.id | string }}"
         PRIVATE_KEY: "{{ github_credentials.private_key | eyaml(github_credentials.eyaml_keys) }}"
+
+- name: Tekton App secrets
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: tekton-quay-credentials
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        QUAY_API_BEARER_TOKEN: "{{ tekton_credentials.bearer_token | eyaml(tekton_credentials.eyaml_keys) }}"
