[fix] Token path

--- a/ansible/roles/wordpress-builds/tasks/secrets.yml
+++ b/ansible/roles/wordpress-builds/tasks/secrets.yml
@@ -56,4 +56,4 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        QUAY_API_BEARER_TOKEN: "{{ tekton_credentials.bearer_token | eyaml(tekton_credentials.eyaml_keys) }}"
+        QUAY_API_BEARER_TOKEN: "{{ tekton_credentials.quay_api.bearer_token | eyaml(tekton_credentials.eyaml_keys) }}"
