--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -148,14 +148,14 @@
       apiVersion: batch/v1
       kind: CronJob
       metadata:
-        name: "{{ run_pipeline_wp_base_build }}"
+        name: "{{ run_pipeline_wp_base_build }}-rc"
         namespace: "{{ inventory_namespace }}"
         labels:
           app.kubernetes.io/component: 'cronjob'
-          app.kubernetes.io/name: "{{ pipeline_name }}"
+          app.kubernetes.io/name: "{{ pipeline_name }}-rc"
       spec:
         timeZone: "Europe/Zurich"
-        schedule: "01 * * * *"
+        schedule: "30 * * * *"
         concurrencyPolicy: Forbid
         jobTemplate:
           spec:
@@ -165,7 +165,7 @@
                 serviceAccountName: "{{ wp_base_builder_service_account }}"
                 restartPolicy: Never
                 containers:
-                  - name: trigger-oc-pipelinerun
+                  - name: trigger-oc-pipelinerun-rc
                     image: "{{ oc_cli_image }}"
                     command:
                       - /bin/sh
@@ -176,7 +176,7 @@
                         apiVersion: v1
                         kind: PersistentVolumeClaim
                         metadata:
-                          name: tekton-scratch # TODO we need to change PVC for each build
+                          name: tekton-scratch-$(pwgen 5 1)-rc
                           namespace: "{{ inventory_namespace }}"
                         spec:
                           accessModes:
@@ -192,19 +192,17 @@
                           name: "{{ run_pipeline_wp_base_build }}-rc-$(date -u +%Y%m%d-%H%Mz)"
                           namespace: "{{ inventory_namespace }}"
                         spec:
-                          timeout: "2h"
+                          timeout: "1h"
                           serviceAccountName: "{{ wp_base_builder_buildah_service_account }}"
                           pipelineRef:
                             name: "{{ pipeline_name }}"
                           params:
-                            - name: next-build-id
-                              value: 2025-136-auto
                             - name: target-deployment
                               value: wp-nginx-rc
                           workspaces:
                             - name: shared-workspace
                               persistentVolumeClaim:
-                                claimName: tekton-scratch # TODO we need to change PVC for each build
+                                claimName: tekton-scratch-rc
                             - name: dockerconfig
                               secret:
                                 secretName: tekton-push
