--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -207,3 +207,73 @@
                               secret:
                                 secretName: tekton-push
                         EOF
+
+- name: wp-base/Tekton - CronJob for Alpha
+  kubernetes.core.k8s:
+    definition:
+      apiVersion: batch/v1
+      kind: CronJob
+      metadata:
+        name: "{{ run_pipeline_wp_base_build }}-alpha"
+        namespace: "{{ inventory_namespace }}"
+        labels:
+          app.kubernetes.io/component: 'cronjob'
+          app.kubernetes.io/name: "{{ pipeline_name }}-alpha"
+      spec:
+        timeZone: "Europe/Zurich"
+        schedule: "0 * * * *"
+        concurrencyPolicy: Forbid
+        jobTemplate:
+          spec:
+            backoffLimit: 0
+            template:
+              spec:
+                serviceAccountName: "{{ wp_base_builder_service_account }}"
+                restartPolicy: Never
+                containers:
+                  - name: trigger-oc-pipelinerun-alpha
+                    image: "{{ oc_cli_image }}"
+                    command:
+                      - /bin/sh
+                      - -c
+                      - |
+                        oc apply -f - <<EOF
+                        ---
+                        apiVersion: v1
+                        kind: PersistentVolumeClaim
+                        metadata:
+                          name: tekton-scratch-$(pwgen 5 1)-alpha
+                          namespace: "{{ inventory_namespace }}"
+                        spec:
+                          accessModes:
+                            - ReadWriteOnce
+                          storageClassName: wordpress-nfs-build
+                          resources:
+                            requests:
+                              storage: 50Mi
+                        ---
+                        apiVersion: tekton.dev/v1beta1
+                        kind: PipelineRun
+                        metadata:
+                          name: "{{ run_pipeline_wp_base_build }}-alpha-$(date -u +%Y%m%d-%H%Mz)"
+                          namespace: "{{ inventory_namespace }}"
+                        spec:
+                          timeout: "1h"
+                          serviceAccountName: "{{ wp_base_builder_buildah_service_account }}"
+                          pipelineRef:
+                            name: "{{ pipeline_name }}"
+                          params:
+                            - name: explicit-tag
+                              value: nightly-$(date -u +%Y%m%d)
+                            - name: target-deployment
+                              value: wp-nginx-alpha
+                            - name: wordpress-version
+                              value: latest
+                          workspaces:
+                            - name: shared-workspace
+                              persistentVolumeClaim:
+                                claimName: tekton-scratch-alpha
+                            - name: dockerconfig
+                              secret:
+                                secretName: tekton-push
+                        EOF
