[fix] Modify the code according to the comments

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -130,4 +130,4 @@
               enabled: true
 
 - name: "Restore nightly sites from prod to test"
-  ansible.builtin.include_tasks: restore-sites-prod-to-test.yml
+  include_tasks: restore-sites-prod-to-test.yml
