--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -63,9 +63,8 @@
         keyId: "{{ s3_backup_credentials.keyId }}"
         accessSecret: "{{ s3_backup_credentials.accessSecret }}"
 
-- name: MariaDB operator restore (ro) credentials
+- name: MariaDB operator restore credentials (read-only)
   kubernetes.core.k8s:
-    state: present
     definition:
       apiVersion: v1
       kind: Secret
