--- a/ansible/roles/wordpress-namespace/tasks/restore-sites-prod-to-test.yml
+++ b/ansible/roles/wordpress-namespace/tasks/restore-sites-prod-to-test.yml
@@ -1,6 +1,5 @@
 - name: ServiceAccount/restore-sites-prod-to-test
   kubernetes.core.k8s:
-    state: present
     definition:
       apiVersion: v1
       kind: ServiceAccount
@@ -10,7 +9,6 @@
 
 - name: Role/restore-sites-prod-to-test
   kubernetes.core.k8s:
-    state: present
     definition:
       apiVersion: rbac.authorization.k8s.io/v1
       kind: Role
@@ -33,7 +31,6 @@
 
 - name: RoleBinding/restore-sites-prod-to-test
   kubernetes.core.k8s:
-    state: present
     definition:
       apiVersion: rbac.authorization.k8s.io/v1
       kind: RoleBinding
@@ -51,7 +48,6 @@
 
 - name: ConfigMap/restore-sites-prod-to-test
   kubernetes.core.k8s:
-    state: present
     definition:
       apiVersion: v1
       kind: ConfigMap
@@ -70,28 +66,28 @@
 
           # if no ingress(es) given then takes default ingresses
           if [ $# -eq 0 ]; then
-              readarray -t ingresses < "/restore/ingresses.txt";
+              readarray -t ingresses < "/restore/ingresses.txt"
           else
-            ingresses=("$@");
+            ingresses=("$@")
           fi
 
-          readarray -t prod_dbs < "/restore/dbs.txt"; # TODO : temporary solution, after will use api from WP-Veritas
+          readarray -t prod_dbs < "/restore/dbs.txt" # TODO : temporary solution, after will use api from WP-Veritas
 
-          i=0;
-          date=$(date +%Y%m%d%H%m%S);
+          i=0
+          date="$(date +%Y%m%d%H%m%S)"
 
           # restore each db from prod to test
           for ingress in "${ingresses[@]}"; do
 
-              echo "Ingress : $ingress";
+              echo "Ingress : $ingress"
 
-              mariadb_test_host=$(kubectl get ingress/$ingress -o yaml | grep WP_DB_HOST | tr -s ' ' | cut -d ' ' -f 4 | tr -d ';');
-              echo "MariaDB test host : $mariadb_test_host";
-              mariadb_prod_host="${prod_dbs[i]}"; # TODO : temporary solution, after will use api from WP-Veritas
-              echo "MariaDB prod host : $mariadb_prod_host";
+              mariadb_test_host=$(kubectl get ingress/$ingress -o yaml | grep WP_DB_HOST | tr -s ' ' | cut -d ' ' -f 4 | tr -d ';')
+              echo "MariaDB test host : $mariadb_test_host"
+              mariadb_prod_host="${prod_dbs[i]}" # TODO : temporary solution, after will use api from WP-Veritas
+              echo "MariaDB prod host : $mariadb_prod_host"
 
-              echo "Applying restore ...";
-              kind_restore=$(mktemp);
+              echo "Applying restore ..."
+              kind_restore=$(mktemp)
               cat <<EOF > "$kind_restore"
           apiVersion: k8s.mariadb.com/v1alpha1
           kind: Restore
@@ -125,17 +121,17 @@
               - --verbose
           EOF
 
-              pod=$(kubectl apply -f "$kind_restore" -o name);
-              kubectl wait --for=condition=complete "$pod" --timeout=10m;
+              pod=$(kubectl apply -f "$kind_restore" -o name)
+              kubectl wait --for=condition=complete "$pod" --timeout=10m
 
               # delete resources
-              kubectl delete -f "$kind_restore";
-              rm "$kind_restore";
+              kubectl delete -f "$kind_restore"
+              rm "$kind_restore"
 
-              echo "Replace 'www.epfl.ch' by 'wpn-test.epfl.ch'";
-              wp --ingress=$ingress search-replace "https://www.epfl.ch" "https://wpn-test.epfl.ch";
+              echo "Replace 'www.epfl.ch' by 'wpn-test.epfl.ch'"
+              wp --ingress=$ingress search-replace "https://www.epfl.ch" "https://wpn-test.epfl.ch"
 
-              i=$((i+1));
+              i=$((i+1))
           done
 
           # update menu
@@ -149,7 +145,6 @@
 
 - name: CronJob/restore-sites-from-prod-to-test
   kubernetes.core.k8s:
-    state: present
     definition:
       apiVersion: batch/v1
       kind: CronJob
