--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -232,12 +232,13 @@
                       - /bin/sh
                       - -c
                       - |
+                        tekton_pvc_name="tekton-scratch-$(pwgen 5 1)-rc"
                         oc apply -f - <<EOF
                         ---
                         apiVersion: v1
                         kind: PersistentVolumeClaim
                         metadata:
-                          name: tekton-scratch-$(pwgen 5 1)-rc
+                          name: $tekton_pvc_name
                           namespace: "{{ inventory_namespace }}"
                         spec:
                           accessModes:
@@ -263,7 +264,7 @@
                           workspaces:
                             - name: shared-workspace
                               persistentVolumeClaim:
-                                claimName: tekton-scratch-rc
+                                claimName: $tekton_pvc_name
                             - name: dockerconfig
                               secret:
                                 secretName: tekton-push
@@ -298,12 +299,13 @@
                       - /bin/sh
                       - -c
                       - |
+                        tekton_pvc_name="tekton-scratch-$(pwgen 5 1)-alpha"
                         oc apply -f - <<EOF
                         ---
                         apiVersion: v1
                         kind: PersistentVolumeClaim
                         metadata:
-                          name: tekton-scratch-$(pwgen 5 1)-alpha
+                          name: $tekton_pvc_name
                           namespace: "{{ inventory_namespace }}"
                         spec:
                           accessModes:
@@ -324,7 +326,7 @@
                           pipelineRef:
                             name: "{{ pipeline_name }}"
                           params:
-                            - name: explicit-tag
+                            - name: explicit-stem
                               value: nightly-$(date -u +%Y%m%d)
                             - name: target-deployment
                               value: wp-nginx-alpha
@@ -333,7 +335,7 @@
                           workspaces:
                             - name: shared-workspace
                               persistentVolumeClaim:
-                                claimName: tekton-scratch-alpha
+                                claimName: $tekton_pvc_name
                             - name: dockerconfig
                               secret:
                                 secretName: tekton-push
